Archive2/1a/92e30b4f0d953c/output
main.cpp:10:21: error: member reference base type 'Foo [2]' is not a structure or union
    std::cout << arr.b << " " << arr.c << std::endl;
                 ~~~^~
main.cpp:10:37: error: member reference base type 'Foo [2]' is not a structure or union
    std::cout << arr.b << " " << arr.c << std::endl;
                                 ~~~^~
2 errors generated.
